# OpenOlympus

./: .gitignore  CLAUDE.md  Makefile  PROMPT.md  pyproject.toml
agents/: architect.md  auditor.md  builder.md  coordinator.md  critic.md  explorer.md  planner.md  researcher.md  reviewer.md  tester.md  tracker.md  worker.md
data/: olympus.db  olympus.db-shm  olympus.db-wal
src/olympus/: __init__.py  types.py
src/olympus/agent/: definition.py  evolution.py  llm_agent.py  loader.py  mock.py  pool.py  providers.py  speaker.py  validator.py
src/olympus/api/: app.py  ws.py
src/olympus/data/: __init__.py  collector.py  database.py  models.py  rules.py  score_extractor.py
src/olympus/director/: director.py  intent_parser.py  room_aliases.py  room_factory.py  types.py
src/olympus/events/: bus.py  types.py
src/olympus/loop/: convergence.py  engine.py  stagnation.py
src/olympus/memory/: consensus.py  history.py  references.py  rooms_store.py  schemas.py  session.py  wbs.py
src/olympus/protocol/: __init__.py  base.py  decision_gate.py  delegate.py  parallel_gather.py  peer_review.py  pipeline.py  review_meeting.py  roundtable.py  standup.py
src/olympus/room/: pause_gate.py  room.py
tests/: test_agent_loader.py  test_api_okr_decisions.py  test_consensus.py  test_convergence.py  test_engine_okr_tracking.py  test_history.py  test_okr_extension.py  test_permissions.py  test_project_management.py  test_protocols.py  test_room.py  test_score_extractor.py  test_stagnation.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
(+15 files in other folders)
